--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
             </li>
         </ul>
     </nav>
+
+    <footer>
+        <p>
+            &copy; Musharraf Hussain 2023 - All Rights Reserved.
+        </p>
+    </footer>
     <script src="script.js"></script>
 </body>
 
